# personal-learning-monorepo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json
.firecrawl/: docs-js-interrupts.md  docs-js-memory.md  docs-js-overview.md  docs-python-interrupts.md  docs-python-overview.md  docs-python-persistence.md  langgraph-hitl.json  langgraph-mcp.json  langgraph-memory.json  langgraph-py-starters.json  langgraph-swarm.json  repo-cursor-langgraph-starter.md  repo-fastapi-mcp-langgraph-template.md  repo-fullstack-nextjs-agent.md  repo-langchain-mcp-adapters.md  repo-langgraph-memory.md  repo-vstorm-template.md  superpowers-install.md
.gitnexus/: meta.json
.sisyphus/drafts/: python-first-langgraph-agent-orchestration.md
entities/: README.md  _template.md
entities/_discover/: finom-entities.md
entities/architectures/: staged-workflow-architecture.md
entities/concepts/: central-vs-embedded-ai.md  confidence-routing.md  earned-autonomy.md  fte-per-active-customer.md  hallucination-mitigation-protocols.md  market-config-as-data.md  selective-field-embedding.md
entities/methodologies/: confidence-calibration-deep-dive.md  expected-calibration-error.md
entities/patterns/: proposal-mode-vs-action-mode.md
entities/products/: ai-accountant.md
entities/protocols/: mcp.md
scripts/: extract-entities.ts
topics/jobs/finom/code/python-sync-async-refactor/: DIFF_MAP.md  EXPLANATION.md  README.md  bad_sync_api.py  mock_ai_adapter.py  pyproject.toml
topics/jobs/finom/code/python-sync-async-refactor/tests/: test_batch_behavior.py  test_contract_parity.py
(+416 files in other folders)
