[project]
name = "finom-sync-async-refactor"
version = "0.1.0"
description = "Interview 3 drill: refactor sync AI REST API to async with contract parity"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
  "anyio>=4.4.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
